// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message empty 1`] = `
<div
  className="emotion-2"
>
  <p
    className="emotion-0"
  />
  <button
    className="emotion-1"
    onClick={[Function]}
  />
</div>
`;

exports[`Message text 1`] = `
<div
  className="emotion-2"
>
  <p
    className="emotion-0"
  >
    This is an admin message.
  </p>
  <button
    className="emotion-1"
    onClick={[Function]}
  />
</div>
`;
